# consultas

./: .gitignore  README.md  index.html  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt  robots.txt
.github/workflows/: pelican-publish.yml
abogados-registrados/: index.html
agenda-audiencias/: index.html
articulos/acuerdos/: index.html
articulos/comunicados-noticias/: index.html
articulos/transmisiones-sesiones/: index.html
content/: abogados.html  audiencias.html  edictos.html  glosas.html  listas_de_acuerdos.html  peritos.html  redam.html  repsvm.html  sentencias.html  ubicaciones_expedeintes.html  ubicaciones_expedientes.html
content/consultas/: abogados-registrados.html  acuerdos-consejo-pleno.html  agenda-audiencias.html  comunicados-noticias-entrevistas.html  descarga-edictos.html  descarga-glosas.html  descarga-listas-de-acuerdos.html  descarga-sentencias.html  descargar-edictos.html  edictos.html  (+12 more)
edictos/: index.html
fuentes-rss/: index.html
glosas/: index.html
js/: consultas-abogados-registrados.js  consultas-agenda-audiencias.js  consultas-distritos.js  consultas-edictos.js  consultas-expediente.js  consultas-fecha.js  consultas-listas-de-acuerdos.js  consultas-rangos-fechas-expedientes.js  consultas-rangos-fechas.js  consultas-sentencias.js  consultas-transmisiones-sesiones.js  consultas-ubicaciones-expedientes.js
listas-de-acuerdos/: index.html
peritos/: index.html
redam/: index.html
repsvm/: index.html
sentencias/: index.html
tesis-jurisprudencias/: index.html
ubicaciones-expedientes/: index.html
(+69 files in other folders)
