[tool.poetry]
name = "pjecz-justicia-digital-bootstrap"
version = "0.1.0"
description = "Sitio web para consultar información hecho con bootstrap y datatables."
authors = ["Guillermo Valdes <guillermo.valdes@pjecz.gob.mx>"]
license = "AGPL3"

[tool.poetry.dependencies]
python = "^3.11"
pelican = "^4.8.0"
Markdown = "^3.4.3"

[tool.poetry.dev-dependencies]
pylint = "^2.17.2"
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
